<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/themFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgToolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/mainToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:title=" ">

                    <LinearLayout
                        android:id="@+id/lnSearch"
                        android:layout_width="250dp"
                        android:layout_height="?android:attr/actionBarSize"
                        android:layout_weight="1"
                        android:background="@drawable/bg_search"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:scaleType="centerCrop"
                            android:background="@drawable/selector_bgsearch"
                            android:src="@drawable/search_icon_50px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/brandon"
                            android:gravity="center"
                            android:background="@drawable/selector_bgsearch"
                            android:text="Tìm kiếm trên Quara"
                            android:textColor="@color/colorGrey"
                            android:textSize="15sp" />
                    </LinearLayout>


                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.AppBarLayout>


            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_anchorGravity="bottom"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
                        android:id="@+id/hicvp"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        app:icvp_center_page_scale_offset="30dp"
                        app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
                        app:icvp_max_page_scale="0.8"
                        app:icvp_medium_scaled="false"
                        app:icvp_min_page_scale="0.55"
                        app:icvp_min_page_scale_offset="5dp"
                        app:icvp_scroll_duration="250" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:drawableTop="@drawable/market"
                            android:stateListAnimator="@null"
                            android:text="@string/quaramark"
                            android:textAllCaps="false"
                            android:textSize="10sp" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:drawableTop="@drawable/discount"
                            android:stateListAnimator="@null"
                            android:text="@string/khuyenmai"
                            android:textAllCaps="false"
                            android:textSize="10sp" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:drawableTop="@drawable/new_product"
                            android:stateListAnimator="@null"
                            android:text="@string/sieure"
                            android:textAllCaps="false"
                            android:textSize="10sp" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:drawableTop="@drawable/magiamgia"
                            android:stateListAnimator="@null"
                            android:text="@string/magiamgia"
                            android:textAllCaps="false"
                            android:textSize="10sp" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:drawableTop="@drawable/category"
                            android:stateListAnimator="@null"
                            android:text="@string/danhmuc"
                            android:textAllCaps="false"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="30dp"
                                android:layout_height="2dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="2dp"
                                android:background="@color/colorDarkGrey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/timkiemphobien"
                                android:textColor="@color/colorDarkGrey"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="30dp"
                                android:layout_height="2dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="2dp"
                                android:background="@color/colorDarkGrey" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/xemthem"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorOrange"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:gravity="end" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <ExpandableListView
            android:id="@+id/epMenu"
            android:layout_width="match_parent"
            android:choiceMode="singleChoice"
            android:groupIndicator="@null"
            android:layout_height="match_parent">

        </ExpandableListView>
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>